# Cerebellum_STM32N6

./: .gitignore  CMakeLists.txt  Cerebellum_STM32N6.code-workspace  README.md  cerebellum.ioc  wheel_drive.md
Core/Inc/: lsm6dsox_imu.h  main.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h
Core/Src/: lsm6dsox_imu.c  main.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c
cmake/: arm-none-eabi.cmake
cubemx-reference/: cubemx-reference.ioc
cubemx-reference/cubemx-LED2/: cerebellum.ioc
cubemx-reference/cubemx-NUCLEO/: cubemx-NUCLEO.ioc
cubemx-reference/cubemx-SPI5/: cubemx-SPI5.ioc
cubemx-reference/cubemx-USART1/: cubemx-USART.ioc
cubemx-reference/cubemx-USR_BTN/: cerebellum.ioc
docs/: INDEX.md  cubemx-regen-notes.md
docs/LSM6DSOX/: LSM6DSOX.md
tools/: stlink-gdbserver-devboot.sh
